<resources>
    <string name="app_name">Go over your limit</string>
    <string name="entrainement">Entrainements</string>
    <string name="exercice">Exercices</string>
    <string name="nutrition">Nutrition</string>
    <string name="statistiques">Statistiques</string>
    <string name="profil">Profil</string>
    <string name="age">Age :</string>
    <string name="poids">Poids :</string>
    <string name="taille">Taille :</string>
    <string name="masse_musculaire">Masse musculaire :</string>
    <string name="masse_graisseuse">Masse graisseuse :</string>
    <string name="mensuration_biceps">Biceps :</string>
    <string name="mensuration_avant_bras">Avant-bras :</string>
    <string name="mensuration_poitrine">Poitrine :</string>
    <string name="mensuration_cou">Cou :</string>
    <string name="mensuration_epaules">Epaules :</string>
    <string name="mensuration_taille">Tour de taille :</string>
    <string name="mensuration_cuisses">Cuisses :</string>
    <string name="mensuration_mollets">Mollets :</string>
    <string name="mensuration_bouton">Ajouter des mensurations</string>
    <string name="valider_bouton">Valider</string>
    <string name="inconinfo_description">Icone information</string>
    <string name="unites">Les unités sont kg et cm</string>
    <string name="mensurations">Mensurations</string>
    <string name="editer">Editer</string>
    <string name="supprimer">Supprimer</string>
    <string name="test">test</string>
    <string name="ajouter_exercice">Ajouter exercice</string>
    <string name="évolution">Évolution</string>
    <string name="temps">Temps</string>
    <string name="date">Date du jour</string>
    <string name="Repas">Repas</string>
    <string name="Petitdej">Petit Déjeuner</string>
    <string name="Déjeuner">Déjeuner</string>
    <string name="Diner">Diner</string>
    <string name="Complément">Compléments</string>
</resources>
